<resources>
    <string name="app_name">Products</string>

    <string name="status_unknown">Unknown</string>
    <string name="status_ordered">Ordered</string>
    <string name="status_delivered">Delivered</string>
    <string name="status_recieved">Recieved</string>
    <string name="hint_productname">Name</string>
    <string name="hint_product_supname">Supplier Name</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="delete_all_products">Delete All Products</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="supplier_number">Supplier\'s Number</string>
    <string name="overview">Overview</string>
    <string name="more_information">More Information</string>
    <string name="price">Price</string>
    <string name="currency">$</string>
    <string name="status">Status</string>
    <string name="product_saved">Product saved.</string>
    <string name="error_saving">Error while saving product.</string>
    <string name="empty_title">Your closet is getting dusty...</string>
    <string name="empty_subtitle">Get started by adding a product.</string>
    <string name="edit_product_title">Edit Product</string>
    <string name="add_product_title">Add a Product</string>
    <string name="unsaved_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog">Delete this product?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_failed">Error while deleting product.</string>
    <string name="delete_successful">Product deleted.</string>
    <string name="unknown_supName">Unknown Supplier\'s Name</string>
    <string name="unknown_supNum">Unknown Supplier\'s Number</string>
    <string name="image">Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="ghina">Ghina</string>
    <string name="shirt">Shirt</string>
    <string name="_96171676752">+96171676752</string>
    <string name="fivedollars">5$</string>
    <string name="call_supplier">Call Supplier</string>
    <string name="sale">Sale</string>
    <string name="zero">0</string>
    <string name="quantity">Quantity</string>
    <string name="no_products_left">No products left!</string>
    <string name="ordered">Ordered</string>
    <string name="Delivered">Delivered</string>
    <string name="received">Received</string>
    <string name="unknown">Unknown</string>
    <string name="contact">Contact</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

</resources>
